...
    spinner.tintColor = Constants.spinnerTintColor
    spinner.color = Constants.spinnerColor
    spinner.isHidden = true
    label.textColor = Constants.labelTextColor
    
    rootView.isAccessibilityElement = true
    rootView.accessibilityIdentifier = "LoginButton"
  }
}

private enum Constants {
  // Colors
  static let contentViewBackgroundColor = UIColor.Purple
...
